Add CS63+DG3F robot support and FABRICS integration
- Add CS63 arm and DG3F gripper URDF/XML assets
- Add FABRICS submodule (forked to rollingball-3/FABRICS)
- Implement genesis_fabric_basic.py for CS63+Tesollo control
- Add manipulation examples and configuration files
- Add Cursor workspace rules for code quality

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "genesis/ext/ParticleMesher"]
 	path = genesis/ext/ParticleMesher
 	url = https://github.com/ACMLCZH/ParticleMesher
+[submodule "genesis/ext/FABRICS"]
+	path = genesis/ext/FABRICS
+	url = git@github.com:rollingball-3/FABRICS.git
